2010-03-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCharacterSet.m: Optimise for cases when huge ranges of
	characters are added to a set (as suggested by Fred).

2010-03-15  Adam Fedor  <fedor@mallory>

	Source/Additions/NSFileHandle+GNUstepBase.m: Define INADDR_NONE
	for Solaris.

2010-03-15  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSString.m (-initWithCoder:): Handle format used for
	XIB encoding.

2010-03-14  Adam Fedor  <fedor@mallory>

	* Source/NSHTTPCookie.m (+requestHeaderFieldsWithCookies:): 
	Correct format syntax.

2010-03-13 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Note use of nonfragile abi
	* configure: regenerate
	* Headers/Additions/GNUstepBase/GSConfig.h.in: save nonfragile abi state
	* Headers/Additions/GNUstepBase/GSVersionMacros.h:
	Fix check for nonfragile-abi state, and raise an error if the current
	compile doesn't atch the state used to build the base library.

2010-03-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyedArchiver.m:
	Create _+clsMap lazily so it's there for subclasses even if the
	initialiser was not called.

2010-03-11 12:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GNUmakefile: Remove reference to synchonization.m.
	* Source/synchronization.m: Remove, since ObjectiveC2 has been
	merged.

2010-03-11 Richard Frith-Macdonald <rfm@gnu.org>

	* configure:
	* config.mak.in:
	* NSCharacterSets/GNUmakefile:
	* Source/unix/Makefile.preamble:
	* Source/win32/Makefile.preamble:
	* Source/ObjectiveC2/Makefile.preamble:
	* Source/Additions/Makefile.preamble:
	* Source/Makefile.preamble:
	* SSL/Makefile.preamble:
	* configure.ac:
	* Documentation/manual/GNUmakefile:
	* Resources/GNUmakefile:
	* Examples/Makefile.preamble:
	* Examples/GNUmakefile:
	* Tools/Makefile.preamble:
	* Tools/make_strings/GNUmakefile.preamble:
        Improve setting of warning flags.

2010-03-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSException.m:
	* configure.ac:
	* configure: